documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

/**
*
*  PC629-1 Driver functions.
*
**/

P61W32API VOID __stdcall PC629_ALTen(USHORT altval,HCARD handleval);

P61W32API VOID __stdcall PC629_AXTen(USHORT axtval,HCARD handleval);

P61W32API USHORT __stdcall PC629_BIT(HCARD handleval);

P61W32API USHORT __stdcall PC629_BITProm(HCARD handleval);

P61W32API USHORT __stdcall PC629_BITRam(HCARD handleval);

P61W32API USHORT __stdcall PC629_BITSim(HCARD handleval);

P61W32API ERRVAL __stdcall PC629_CardClose(HCARD handleval);

P61W32API VOID __stdcall PC629_CardCloseAll(VOID);

P61W32API HCARD __stdcall PC629_CardOpen(INT segval,INT portval,INT irqval);

P61W32API HCARD __stdcall PC629_CardOpenEx(INT cardnum);

P61W32API HCARD __stdcall PC629_Check(INT segval,INT portval,INT irqval);

P61W32API VOID __stdcall PC629_CIDSet(USHORT cidval,HCARD handleval);

P61W32API USHORT __stdcall PC629_FileLoad(LPCSTR filename,HCARD handleval);

P61W32API VOID __stdcall PC629_GapSet(USHORT tival,USHORT tgval,USHORT sgval,HCARD handleval);

P61W32API VOID __stdcall PC629_IMAFS(HCARD handleval);

P61W32API VOID __stdcall PC629_IntClr(HCARD handleval);

P61W32API ERRVAL __stdcall PC629_IntInst(LPVOID hEvent,USHORT options,HCARD handleval);

P61W32API ERRVAL __stdcall PC629_IntUninst(HCARD handleval);

P61W32API BOOL __stdcall PC629_IsOn(HCARD handleval);

P61W32API VOID __stdcall PC629_PromFill(USHORT value,HCARD handleval);

P61W32API USHORT __stdcall PC629_PromRdB(ULONG srcaddr,HCARD handleval);

P61W32API VOID __stdcall PC629_PromRdS(ULONG srcaddr,LPVOID destptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall PC629_PromWrB(ULONG destaddr,USHORT value,HCARD handleval);

P61W32API VOID __stdcall PC629_PromWrS(LPVOID srcptr,ULONG destaddr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall PC629_RamBlkAct(USHORT blknum,HCARD handleval);

P61W32API USHORT __stdcall PC629_RamCnt(USHORT blkcnt,HCARD handleval);

P61W32API VOID __stdcall PC629_RamFill(USHORT blknum,USHORT startaddr,ULONG count,USHORT value,HCARD handleval);

P61W32API VOID __stdcall PC629_RamRdS(USHORT blknum,USHORT srcaddr,LPVOID destptr,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall PC629_RamRdW(USHORT blknum,USHORT srcaddr,HCARD handleval);

P61W32API VOID __stdcall PC629_RamWrS(LPVOID srcptr,USHORT blknum,USHORT destaddr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall PC629_RamWrW(USHORT blknum,USHORT destaddr,USHORT value,HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdDir(USHORT regnum,HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdErr(HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdInd(USHORT regnum,HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdLWM(HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdStatus(HCARD handleval);

P61W32API USHORT __stdcall PC629_RegRdVect(HCARD handleval);

P61W32API VOID __stdcall PC629_RegWrDir(USHORT regnum,USHORT value,HCARD handleval);

P61W32API VOID __stdcall PC629_RegWrInd(USHORT regnum,USHORT value,HCARD handleval);

P61W32API VOID __stdcall PC629_Reset(HCARD handleval);

P61W32API BOOL __stdcall PC629_Start(HCARD handleval);

P61W32API BOOL __stdcall PC629_Stop(HCARD handleval);

P61W32API ERRVAL __stdcall PC629_Uncheck(HCARD handleval);

P61W32API ERRVAL __stdcall PC629_UncheckAll();

P61W32API VOID __stdcall PC629_XFormat(USHORT value,HCARD handleval);


/**
*
*  Internal functions used by the PC629-1 Driver.
*
**/

P61W32API ERRVAL __stdcall DRV629_BIT(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_BITProm(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_BITRam(HCARD handleval);

P61W32API USHORT __stdcall DRV629_BITSim(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_CardClose(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_CardCloseAll(VOID);

P61W32API ERRVAL __stdcall DRV629_CardInit(VOID);

P61W32API HCARD __stdcall DRV629_CardOpen(INT segval,INT portval,INT irqval);

P61W32API HCARD __stdcall DRV629_CardOpenEx(LPCSTR cardname,INT segval,INT portval,INT irqval);

P61W32API HCARD __stdcall DRV629_CardOpenExx(LPCSTR cardname,INT segval,INT portval,INT irqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P61W32API HCARD __stdcall DRV629_CardOpenExxx(INT cardnum);

P61W32API HCARD __stdcall DRV629_CardOpenExxxx(INT cardnum,LPSTR cardname);

P61W32API HCARD __stdcall DRV629_Check(INT segval,INT portval,INT irqval);

P61W32API ULONG __stdcall DRV629_Div(ULONG diva,ULONG divb);

P61W32API INT __stdcall DRV629_DllUsageCount(VOID);

P61W32API VOID __stdcall DRV629_ErrClear(VOID);

P61W32API BOOL __stdcall DRV629_ErrGetFlag(VOID);

P61W32API ULONG __stdcall DRV629_ErrGetLine(VOID);

P61W32API ERRVAL __stdcall DRV629_ErrGetValue(VOID);

P61W32API VOID __stdcall DRV629_ErrSet(ERRVAL errvalue,ULONG errline);

P61W32API VOID __stdcall DRV629_FileClose(LPVOID handle);

P61W32API ERRVAL __stdcall DRV629_FileLoad(LPCSTR filename,HCARD handleval);

P61W32API LPVOID __stdcall DRV629_FileOpen(LPCSTR filename);

P61W32API VOID __stdcall DRV629_FilePush(LPVOID handle,USHORT value);

P61W32API ERRVAL __stdcall DRV629_FileReadB(LPVOID handle,LPVOID buffer,USHORT count);

P61W32API ERRVAL __stdcall DRV629_FileSeek(LPVOID handle,ULONG offset);

P61W32API ULONG __stdcall DRV629_FileTell(LPVOID handle);

P61W32API ERRVAL __stdcall DRV629_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

P61W32API USHORT __stdcall DRV629_GetCID(USHORT index);

P61W32API LPVOID __stdcall DRV629_GetHandler(USHORT index);

P61W32API USHORT __stdcall DRV629_GetHigh(ULONG val);

P61W32API USHORT __stdcall DRV629_GetInitFlag(VOID);

P61W32API USHORT __stdcall DRV629_GetLow(ULONG val);

P61W32API USHORT __stdcall DRV629_GetMask1(USHORT index);

P61W32API USHORT __stdcall DRV629_GetMask2(USHORT index);

P61W32API ULONG __stdcall DRV629_GetPromAddr(USHORT index);

P61W32API USHORT __stdcall DRV629_GetTGSG(USHORT index);

P61W32API USHORT __stdcall DRV629_GetTISG(USHORT index);

P61W32API ERRVAL __stdcall DRV629_HandleClose(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_HandleDel(HCARD handleval);

P61W32API HCARD __stdcall DRV629_HandleIns(LPCSTR cardname,INT segval,INT portval,INT irqval,LPVOID hAppWnd,USHORT uiRemovalMsg);