documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32NET.VB


    Public Declare Sub PC629_ALTen Lib "P61W32.DLL" Alias "_PC629_ALTen@8" (ByVal altval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_AXTen Lib "P61W32.DLL" Alias "_PC629_AXTen@8" (ByVal axtval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_BIT Lib "P61W32.DLL" Alias "_PC629_BIT@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_BITProm Lib "P61W32.DLL" Alias "_PC629_BITProm@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_BITRam Lib "P61W32.DLL" Alias "_PC629_BITRam@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_BITSim Lib "P61W32.DLL" Alias "_PC629_BITSim@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_CardClose Lib "P61W32.DLL" Alias "_PC629_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC629_CardCloseAll Lib "P61W32.DLL" Alias "_PC629_CardCloseAll@0" ()
    Public Declare Function PC629_CardOpen Lib "P61W32.DLL" Alias "_PC629_CardOpen@12" (ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32) As UInt32
    Public Declare Function PC629_CardOpenEx Lib "P61W32.DLL" Alias "_PC629_CardOpenEx@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Function PC629_Check Lib "P61W32.DLL" Alias "_PC629_Check@12" (ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32) As UInt32
    Public Declare Sub PC629_CIDSet Lib "P61W32.DLL" Alias "_PC629_CIDSet@8" (ByVal cidval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_FileLoad Lib "P61W32.DLL" Alias "_PC629_FileLoad@8" (ByRef filename As String, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC629_GapSet Lib "P61W32.DLL" Alias "_PC629_GapSet@16" (ByVal tival As UInt16, ByVal tgval As UInt16, ByVal sgval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_IMAFS Lib "P61W32.DLL" Alias "_PC629_IMAFS@4" (ByVal handleval As UInt32)
    Public Declare Sub PC629_IntClr Lib "P61W32.DLL" Alias "_PC629_IntClr@4" (ByVal handleval As UInt32)
    Public Declare Function PC629_IntInst Lib "P61W32.DLL" Alias "_PC629_IntInst@12" (ByVal hevent As IntPtr, ByVal optionvals As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC629_IntUninst Lib "P61W32.DLL" Alias "_PC629_IntUninst@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC629_IsOn Lib "P61W32.DLL" Alias "_PC629_IsOn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC629_PromFill Lib "P61W32.DLL" Alias "_PC629_PromFill@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_PromRdB Lib "P61W32.DLL" Alias "_PC629_PromRdB@8" (ByVal srcaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC629_PromRdS Lib "P61W32.DLL" Alias "_PC629_PromRdS@16" (ByVal srcaddr As UInt32, ByVal destptr As IntPtr, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_PromWrB Lib "P61W32.DLL" Alias "_PC629_PromWrB@12" (ByVal destaddr As UInt32, ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_PromWrS Lib "P61W32.DLL" Alias "_PC629_PromWrS@16" (ByVal srcptr As IntPtr, ByVal destaddr As UInt32, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_RamBlkAct Lib "P61W32.DLL" Alias "_PC629_RamBlkAct@8" (ByVal blknum As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RamCnt Lib "P61W32.DLL" Alias "_PC629_RamCnt@8" (ByVal blkcnt As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC629_RamFill Lib "P61W32.DLL" Alias "_PC629_RamFill@20" (ByVal blknum As UInt16, ByVal startaddr As UInt16, ByVal count As UInt32, ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_RamRdS Lib "P61W32.DLL" Alias "_PC629_RamRdS@20" (ByVal blknum As UInt16, ByVal srcaddr As UInt16, ByVal destptr As IntPtr, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_RamRdW Lib "P61W32.DLL" Alias "_PC629_RamRdW@12" (ByVal blknum As UInt16, ByVal srcaddr As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC629_RamWrS Lib "P61W32.DLL" Alias "_PC629_RamWrS@20" (ByVal srcptr As IntPtr, ByVal blknum As UInt16, ByVal destaddr As UInt16, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_RamWrW Lib "P61W32.DLL" Alias "_PC629_RamWrW@16" (ByVal blknum As UInt16, ByVal destaddr As UInt16, ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC629_RegRdDir Lib "P61W32.DLL" Alias "_PC629_RegRdDir@8" (ByVal regnum As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RegRdErr Lib "P61W32.DLL" Alias "_PC629_RegRdErr@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RegRdInd Lib "P61W32.DLL" Alias "_PC629_RegRdInd@8" (ByVal regnum As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RegRdLWM Lib "P61W32.DLL" Alias "_PC629_RegRdLWM@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RegRdStatus Lib "P61W32.DLL" Alias "_PC629_RegRdStatus@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function PC629_RegRdVect Lib "P61W32.DLL" Alias "_PC629_RegRdVect@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC629_RegWrDir Lib "P61W32.DLL" Alias "_PC629_RegWrDir@12" (ByVal regnum As UInt16, ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_RegWrInd Lib "P61W32.DLL" Alias "_PC629_RegWrInd@12" (ByVal regnum As UInt16, ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC629_Reset Lib "P61W32.DLL" Alias "_PC629_Reset@4" (ByVal handleval As UInt32)
    Public Declare Function PC629_Start Lib "P61W32.DLL" Alias "_PC629_Start@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC629_Stop Lib "P61W32.DLL" Alias "_PC629_Stop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC629_Uncheck Lib "P61W32.DLL" Alias "_PC629_Uncheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC629_UncheckAll Lib "P61W32.DLL" Alias "_PC629_UncheckAll@0" () As Int32
    Public Declare Sub PC629_XFormat Lib "P61W32.DLL" Alias "_PC629_XFormat@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Function DRV629_BIT Lib "P61W32.DLL" Alias "_DRV629_BIT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_BITProm Lib "P61W32.DLL" Alias "_DRV629_BITProm@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_BITRam Lib "P61W32.DLL" Alias "_DRV629_BITRam@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_BITSim Lib "P61W32.DLL" Alias "_DRV629_BITSim@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function DRV629_CardClose Lib "P61W32.DLL" Alias "_DRV629_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_CardCloseAll Lib "P61W32.DLL" Alias "_DRV629_CardCloseAll@0" () As Int32
    Public Declare Function DRV629_CardInit Lib "P61W32.DLL" Alias "_DRV629_CardInit@0" () As Int32
    Public Declare Function DRV629_CardOpen Lib "P61W32.DLL" Alias "_DRV629_CardOpen@12" (ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32) As UInt32
    Public Declare Function DRV629_CardOpenEx Lib "P61W32.DLL" Alias "_DRV629_CardOpenEx@16" (ByRef cardname As String, ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32) As UInt32
    Public Declare Function DRV629_CardOpenExx Lib "P61W32.DLL" Alias "_DRV629_CardOpenExx@24" (ByRef cardname As String, ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function DRV629_CardOpenExxx Lib "P61W32.DLL" Alias "_DRV629_CardOpenExxx@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Function DRV629_CardOpenExxxx Lib "P61W32.DLL" Alias "_DRV629_CardOpenExxxx@8" (ByVal cardnum As Int32, ByRef cardname As String) As UInt32
    Public Declare Function DRV629_Check Lib "P61W32.DLL" Alias "_DRV629_Check@12" (ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32) As UInt32
    Public Declare Function DRV629_Div Lib "P61W32.DLL" Alias "_DRV629_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function DRV629_DllUsageCount Lib "P61W32.DLL" Alias "_DRV629_DllUsageCount@0" () As Int32
    Public Declare Sub DRV629_ErrClear Lib "P61W32.DLL" Alias "_DRV629_ErrClear@0" ()
    Public Declare Function DRV629_ErrGetFlag Lib "P61W32.DLL" Alias "_DRV629_ErrGetFlag@0" () As Int32
    Public Declare Function DRV629_ErrGetLine Lib "P61W32.DLL" Alias "_DRV629_ErrGetLine@0" () As UInt32
    Public Declare Function DRV629_ErrGetValue Lib "P61W32.DLL" Alias "_DRV629_ErrGetValue@0" () As Int32
    Public Declare Sub DRV629_ErrSet Lib "P61W32.DLL" Alias "_DRV629_ErrSet@8" (ByVal errvalue As Int32, ByVal errline As UInt32)
    Public Declare Sub DRV629_FileClose Lib "P61W32.DLL" Alias "_DRV629_FileClose@4" (ByVal handle As IntPtr)
    Public Declare Function DRV629_FileLoad Lib "P61W32.DLL" Alias "_DRV629_FileLoad@8" (ByRef filename As String, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_FileOpen Lib "P61W32.DLL" Alias "_DRV629_FileOpen@4" (ByRef filename As String) As UInt32
    Public Declare Sub DRV629_FilePush Lib "P61W32.DLL" Alias "_DRV629_FilePush@8" (ByVal handle As IntPtr, ByVal value As UInt16)
    Public Declare Function DRV629_FileReadB Lib "P61W32.DLL" Alias "_DRV629_FileReadB@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function DRV629_FileSeek Lib "P61W32.DLL" Alias "_DRV629_FileSeek@8" (ByVal handle As IntPtr, ByVal offset As UInt32) As Int32
    Public Declare Function DRV629_FileTell Lib "P61W32.DLL" Alias "_DRV629_FileTell@4" (ByVal handle As IntPtr) As UInt32
    Public Declare Function DRV629_FileWrite Lib "P61W32.DLL" Alias "_DRV629_FileWrite@12" (ByVal handle As IntPtr, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function DRV629_GetCID Lib "P61W32.DLL" Alias "_DRV629_GetCID@4" (ByVal index As UInt16) As UInt16
    Public Declare Function DRV629_GetHandler Lib "P61W32.DLL" Alias "_DRV629_GetHandler@4" (ByVal index As UInt16) As UInt32
    Public Declare Function DRV629_GetHigh Lib "P61W32.DLL" Alias "_DRV629_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function DRV629_GetInitFlag Lib "P61W32.DLL" Alias "_DRV629_GetInitFlag@0" () As UInt16
    Public Declare Function DRV629_GetLow Lib "P61W32.DLL" Alias "_DRV629_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function DRV629_GetMask1 Lib "P61W32.DLL" Alias "_DRV629_GetMask1@4" (ByVal index As UInt16) As UInt16
    Public Declare Function DRV629_GetMask2 Lib "P61W32.DLL" Alias "_DRV629_GetMask2@4" (ByVal index As UInt16) As UInt16
    Public Declare Function DRV629_GetPromAddr Lib "P61W32.DLL" Alias "_DRV629_GetPromAddr@4" (ByVal index As UInt16) As UInt32
    Public Declare Function DRV629_GetTGSG Lib "P61W32.DLL" Alias "_DRV629_GetTGSG@4" (ByVal index As UInt16) As UInt16
    Public Declare Function DRV629_GetTISG Lib "P61W32.DLL" Alias "_DRV629_GetTISG@4" (ByVal index As UInt16) As UInt16
    Public Declare Function DRV629_HandleClose Lib "P61W32.DLL" Alias "_DRV629_HandleClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_HandleDel Lib "P61W32.DLL" Alias "_DRV629_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_HandleIns Lib "P61W32.DLL" Alias "_DRV629_HandleIns@24" (ByRef cardname As String, ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
